# Data-Analysis-with-Python

Sea Level Predictor/: README.md  pyproject.toml  replit_zip_error_log.txt  sea_level_predictor.py
demographic-data-analyzer/: README.md  demographic_data_analyzer.py  replit_zip_error_log.txt
mean-variance-standard-deviation-calculator/: README.md  mean_var_std.py  pyproject.toml  replit_zip_error_log.txt
medical-data-visualizer/: README.md  medical_data_visualizer.py  replit_zip_error_log.txt
page-view-time-series-visualizer/: README.md  pyproject.toml  replit_zip_error_log.txt  time_series_visualizer.py
