[tool.poetry]
name = "boilerplate-medical-data-visualizer-1"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]
readme = "README.md"
packages = [{include = "boilerplate_medical_data_visualizer_1"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.1.0"
matplotlib = "3.8.0"
seaborn = "0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
